# commonhuman-payloads

./: .gitignore  README.md  pyproject.toml
src/commonhuman_payloads/: __init__.py  js_vulns.py  markers.py
src/commonhuman_payloads/creds/: __init__.py  hashes.py  paths.py  patterns.py  signatures.py
src/commonhuman_payloads/encoders/: __init__.py  transforms.py
src/commonhuman_payloads/sqli/: __init__.py  advanced.py  boolean.py  error.py  oob.py  time_based.py  union.py
src/commonhuman_payloads/waf/: __init__.py  detect.py  payloads.py  signatures.py
src/commonhuman_payloads/xss/: __init__.py  advanced.py  html.py  script.py
tests/: conftest.py
tests/integration/: test_tool_compat.py
tests/regression/: test_sqli_payload_regression.py  test_xss_payload_regression.py
tests/unit/: test_js_vulns.py  test_markers.py  test_version.py
tests/unit/creds/: test_hashes.py  test_paths.py  test_patterns.py  test_signatures.py
tests/unit/encoders/: test_transforms.py
tests/unit/sqli/: test_advanced.py  test_boolean.py  test_error.py  test_oob.py  test_time.py  test_union.py
tests/unit/waf/: test_detect.py  test_payloads.py  test_signatures.py
tests/unit/xss/: test_advanced.py  test_api.py  test_html.py  test_script.py
